--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -6,4 +6,4 @@ PY=$SNAP/usr/bin/python3.8
 rm -rf "$CACHE_DIR"
 mkdir -p "$CACHE_DIR"
 export PYTHONPYCACHEPREFIX=$CACHE_DIR
-$PY -m compileall -x .*\.syntaxerror.py$ -q $SNAP/lib/python3.8/site-packages $SNAP/usr/lib/python3.8
+$PY -m compileall -x .*\.syntaxerror.py$ -q $SNAP/crossbar $SNAP/usr/lib/python3.8
