--- a/test/jupyter/notebooks/usage-logs.ipynb
+++ b/test/jupyter/notebooks/usage-logs.ipynb
@@ -11,8 +11,8 @@
     "import numpy as np\n",
     "from pprint import pprint\n",
     "\n",
-    "from crossbarfx.master.database.globalschema import GlobalSchema\n",
-    "from crossbarfx.master.database.mrealmschema import MrealmSchema\n",
+    "from crossbar.master.database.globalschema import GlobalSchema\n",
+    "from crossbar.master.database.mrealmschema import MrealmSchema\n",
     "\n",
     "print('running zlmdb v{} in {}'.format(zlmdb.__version__, os.getcwd()))\n",
     "\n",
@@ -205,7 +205,7 @@
    "source": [
     "import numpy as np\n",
     "from uuid import UUID\n",
-    "from crossbarfx.cfxdb.log import MWorkerLog\n",
+    "from crossbar.cfxdb.log import MWorkerLog\n",
     "\n",
     "key1 = (np.datetime64('2019-06-24T18:29:00.000000000'), UUID(bytes=b'\\x00' * 16), '')\n",
     "key2 = (np.datetime64('2019-06-24T18:34:00.000000000'), UUID(bytes=b'\\xff' * 16), '')\n",
@@ -304,9 +304,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crossbarfx.master.database.globalschema import GlobalSchema\n",
+    "from crossbar.master.database.globalschema import GlobalSchema\n",
     "\n",
-    "DBFILE_GLOBAL = '/home/oberstet/scm/crossbario/crossbarfx/test/cfc/.crossbar/.db-controller'\n",
+    "DBFILE_GLOBAL = '/home/oberstet/scm/crossbario/crossbar/test/cfc/.crossbar/.db-controller'\n",
     "\n",
     "gdb = zlmdb.Database(DBFILE_GLOBAL, maxsize=2**30, readonly=False)\n",
     "\n",
