--- a/test/test_pevents/jupyter/notebooks/analyze_event_history.ipynb
+++ b/test/test_pevents/jupyter/notebooks/analyze_event_history.ipynb
@@ -33,7 +33,7 @@
     }
    ],
    "source": [
-    "# import crossbarfx-zlmdb and open event history example database\n",
+    "# import crossbar-zlmdb and open event history example database\n",
     "import zlmdb\n",
     "from cfxdb import Schema\n",
     "\n",
