--- a/test/test_pevents/jupyter/notebooks/analyze_event_history_2.ipynb
+++ b/test/test_pevents/jupyter/notebooks/analyze_event_history_2.ipynb
@@ -33,7 +33,7 @@
     }
    ],
    "source": [
-    "# attach to crossbarfx event store\n",
+    "# attach to crossbar event store\n",
     "import zlmdb\n",
     "from cfxdb.schema import Schema\n",
     "\n",
