--- a/test/test_pevents/jupyter/notebooks/analyze_event_history_3.ipynb
+++ b/test/test_pevents/jupyter/notebooks/analyze_event_history_3.ipynb
@@ -137,7 +137,7 @@
     }
    ],
    "source": [
-    "# attach to our crossbarfx event database\n",
+    "# attach to our crossbar event database\n",
     "# when running notebook inside docker\n",
     "DBFILE = '../testdb'\n",
     "\n",
